--- a/p1ch3/1_tensors.ipynb
+++ b/p1ch3/1_tensors.ipynb
@@ -1140,7 +1140,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "74ae68cc-cb85-4661-f9e3-ab6fd4b0cd95"
+        "outputId": "8f929553-0969-4e97-a6e7-be048d482a21"
       },
       "source": [
         "points = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]])\n",
@@ -1148,7 +1148,7 @@
         "second_point[0] = 10.0\n",
         "points"
       ],
-      "execution_count": 30,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1162,7 +1162,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j4wGk8kNX8e4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "43c5f19a-34f3-473d-ecde-52075f730337"
+      },
+      "source": [
+        "second_point"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([10.,  3.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
         }
       ]
     },
@@ -1175,13 +1205,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "cac030ec-02c8-4004-bd6c-1624762bb108"
+        "outputId": "10cdb430-70b4-45c2-fe33-488395caedca"
       },
       "source": [
         "points = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]])\n",
         "points"
       ],
-      "execution_count": 31,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1195,7 +1225,67 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TrmYQiAoY3eh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "77d19098-06d2-4535-d9ef-be698454df87"
+      },
+      "source": [
+        "points.shape"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p6ZEaaGTCdhL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "64e336c1-0b2e-4f28-91bb-2fa2870663f0"
+      },
+      "source": [
+        "points.stride()"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
         }
       ]
     },
@@ -1208,13 +1298,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "2377864f-6d5d-42d1-d059-88fd97cd6bfc"
+        "outputId": "91f61222-171e-40e0-e3c1-3a6526229dfe"
       },
       "source": [
         "points_t = points.t()\n",
         "points_t"
       ],
-      "execution_count": 32,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1317,67 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zbHpAUlmY7EB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a23fdb7a-fee8-4b57-c798-426b702123ab"
+      },
+      "source": [
+        "points_t.shape"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 3])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "poTyWxucCdhN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f6f7acf6-fcec-4444-cff4-31cc783593a4"
+      },
+      "source": [
+        "points_t.stride() # change the order of each element"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 99
         }
       ]
     },
@@ -1258,66 +1408,6 @@
             "tags": []
           },
           "execution_count": 33
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "p6ZEaaGTCdhL",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "fed489dc-6fd8-4d69-b37f-410c08a9dd0d"
-      },
-      "source": [
-        "points.stride()"
-      ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(2, 1)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "poTyWxucCdhN",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c4862eea-376a-4f36-f8de-d81bb938b423"
-      },
-      "source": [
-        "points_t.stride()"
-      ],
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1, 2)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
         }
       ]
     },
@@ -1446,18 +1536,50 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "siDtZEwlYB1M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "2f1d5b58-bb19-45b6-cb7c-1eab9022d225"
+      },
+      "source": [
+        "points"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 1.],\n",
+              "        [5., 3.],\n",
+              "        [2., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "6F92krW2CdhZ",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fc467785-313e-4239-8dd7-c9dd8b04bb79"
+        "outputId": "60bea46e-45a3-4f2a-a226-1ac7ae89418d"
       },
       "source": [
         "points.is_contiguous()"
       ],
-      "execution_count": 40,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1469,7 +1591,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 93
         }
       ]
     },
