--- a/p1ch3/1_tensors.ipynb
+++ b/p1ch3/1_tensors.ipynb
@@ -22,7 +22,8 @@
     "colab": {
       "name": "1_tensors.ipynb",
       "provenance": []
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -2563,7 +2564,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Views of another tensor’s storage"
+        "##Views of another tensor’s storage"
       ]
     },
     {
@@ -2794,7 +2795,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Transposing without copying"
+        "##Transposing without copying"
       ]
     },
     {
@@ -3278,7 +3279,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Transposing in higher dimensions"
+        "##Transposing in higher dimensions"
       ]
     },
     {
@@ -3329,36 +3330,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OBrZfi9xuVQ4",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "477399d2-04fa-4334-91ee-d0272b69540f"
-      },
-      "source": [
-        "some_t.stride()"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(20, 5, 1)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ONP5syMAuLm9",
         "colab_type": "code",
         "colab": {
@@ -3383,6 +3354,36 @@
             "tags": []
           },
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OBrZfi9xuVQ4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "477399d2-04fa-4334-91ee-d0272b69540f"
+      },
+      "source": [
+        "some_t.stride()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(20, 5, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
         }
       ]
     },
@@ -3443,36 +3444,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xz65yDSouW88",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "8b64b465-8115-4934-8b88-840fa5dec60a"
-      },
-      "source": [
-        "transpose_t.stride()"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1, 5, 20)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "1n8T7MeJuMt3",
         "colab_type": "code",
         "colab": {
@@ -3503,7 +3474,567 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "xz65yDSouW88",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8b64b465-8115-4934-8b88-840fa5dec60a"
+      },
+      "source": [
+        "transpose_t.stride()"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 5, 20)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "12lBTpFl0EIf",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Contiguous tensors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bul_Cxyx0RwW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "dbda01d5-0331-4a85-bcb6-d8e3e680f511"
+      },
+      "source": [
+        "points = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]])\n",
+        "points"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 1.],\n",
+              "        [5., 3.],\n",
+              "        [2., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "28x1aynWuO7I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "927b5c35-5014-4473-e337-e089bd2f0ce8"
+      },
+      "source": [
+        "points.is_contiguous()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NOAgr40d0VJ0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "10f876cb-6808-4f9c-8c17-50b73b3c94fa"
+      },
+      "source": [
+        "points_t = points.t()\n",
+        "points_t"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 5., 2.],\n",
+              "        [1., 3., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lXnhCrnc0KCh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2bcfe957-1995-4c20-9f38-5f8b46ea31f7"
+      },
+      "source": [
+        "points_t.is_contiguous()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zAOeKS-p0Lu_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "89f923b8-ee6a-46d7-c8d9-b97e895dab5c"
+      },
+      "source": [
+        "points_t.storage()"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " 4.0\n",
+              " 1.0\n",
+              " 5.0\n",
+              " 3.0\n",
+              " 2.0\n",
+              " 1.0\n",
+              "[torch.FloatStorage of size 6]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QrpKz0W60dzc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f06f1f3f-6006-4dca-903e-464f80971a80"
+      },
+      "source": [
+        "points_t.stride()"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1QC3t2AF0gKe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "bc5a74bd-b997-4330-fa9a-4795c00c5842"
+      },
+      "source": [
+        "points_t_cont = points_t.contiguous()\n",
+        "points_t_cont"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 5., 2.],\n",
+              "        [1., 3., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s4wMPqCm0kUa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "45100ebe-201a-4ec5-d828-2b23ec961685"
+      },
+      "source": [
+        "points_t_cont.storage()"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " 4.0\n",
+              " 5.0\n",
+              " 2.0\n",
+              " 1.0\n",
+              " 3.0\n",
+              " 1.0\n",
+              "[torch.FloatStorage of size 6]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1MKcLJj60iD5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a67370be-9bf9-4730-9419-59cc9f4e9af6"
+      },
+      "source": [
+        "points_t_cont.stride()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kkJ0HD4S70aZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Moving tensors to the GPU"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AgQyHuxq8GEb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import torch"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5LKdDIMy0nFb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "3be5acce-85ff-49a4-edcd-46bdb09ad32b"
+      },
+      "source": [
+        "points_gpu = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]], device='cuda')\n",
+        "points_gpu"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 1.],\n",
+              "        [5., 3.],\n",
+              "        [2., 1.]], device='cuda:0')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rRS3klbn8CeE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "1651ec54-a11a-4b34-db1e-3343fe2ccd4f"
+      },
+      "source": [
+        "points = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]])\n",
+        "points"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 1.],\n",
+              "        [5., 3.],\n",
+              "        [2., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GubaEp_V8Owu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "846146f7-3985-40a1-86e2-4cd1ec356c98"
+      },
+      "source": [
+        "points_gpu = points.to(device='cuda')\n",
+        "points_gpu"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4., 1.],\n",
+              "        [5., 3.],\n",
+              "        [2., 1.]], device='cuda:0')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wJ30PwDS82jP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## NumPy interoperability"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H68iR8io8QSv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "881de76f-de6f-4b36-af50-288fc462566e"
+      },
+      "source": [
+        "points = torch.ones(3, 4)\n",
+        "points"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ywL26Ydr85HO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "f6333026-5c47-424f-d739-703ef4d7b2ef"
+      },
+      "source": [
+        "points_np = points.numpy()\n",
+        "points_np"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2H2DA-nZ861e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "9fbe79d1-1928-4e44-9f3c-997da7f0a6d2"
+      },
+      "source": [
+        "points = torch.from_numpy(points_np)\n",
+        "points"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i5AQblak9JZQ",
         "colab_type": "code",
         "colab": {}
       },
